Added API to list users
